examenes/2017Q2 - 2do parcial/Prego/firewall.conf
# Generated by iptables-save v1.6.0 on Wed Nov 15 20:46:16 2017
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [16:1136]
:POSTROUTING ACCEPT [8:568]
-A INPUT -s 192.168.20.3/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A OUTPUT -s 192.168.20.3/32 -p tcp -m tcp --dport 80 -j ACCEPT
COMMIT
# Completed on Wed Nov 15 20:46:16 2017
# Generated by iptables-save v1.6.0 on Wed Nov 15 20:46:16 2017
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]
-A INPUT -i lo -j ACCEPT
-A INPUT -s 192.168.20.0/24 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 192.168.20.3/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 192.168.20.3/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -s 192.168.20.0/24 -p tcp -m tcp --dport 22 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 80 -j DROP
-A OUTPUT -s 192.168.20.3/32 -p tcp -m tcp --dport 80 -j ACCEPT
COMMIT
# Completed on Wed Nov 15 20:46:16 2017
